concord_macros/tests/trybuild/fail/codegen/unsupported_ws_method.stderr
error: unsupported endpoint method
 --> tests/trybuild/fail/codegen/unsupported_ws_method.rs:8:5
  |
8 |     WS Connect
  |     ^^
